mismanaged change from original shift for prime segments from 'article/aside' to 'major/minor'; this commit fixes that.  Also, attempts to fix git vulnerability alert

--- a/css/segments.lib.css
+++ b/css/segments.lib.css
@@ -56,8 +56,8 @@
 .sevenths > .minor:nth-child(1n),
 .sevenths > .major:nth-child(1n),
 .sevenths > .cell:nth-child(1n),
-.prime-segment > .minor:nth-child(1n),
-.prime-segment > .major:nth-child(1n) {
+.prime-segment > aside:nth-child(1n),
+.prime-segment > article:nth-child(1n) {
   margin-right: 15px;
   margin-left: 0;
 }
@@ -84,8 +84,8 @@
 .sevenths > .minor:last-child,
 .sevenths > .major:last-child,
 .sevenths > .cell:last-child,
-.prime-segment > .minor:last-child,
-.prime-segment > .major:last-child {
+.prime-segment > aside:last-child,
+.prime-segment > article:last-child {
   margin-right: 0;
 }
 .stack > .minor:nth-child(1n),
@@ -111,8 +111,8 @@
 .sevenths > .minor:nth-child(7n),
 .sevenths > .major:nth-child(7n),
 .sevenths > .cell:nth-child(7n),
-.prime-segment > .minor:nth-child(2n),
-.prime-segment > .major:nth-child(2n) {
+.prime-segment > aside:nth-child(2n),
+.prime-segment > article:nth-child(2n) {
   margin-right: 0;
   margin-left: auto;
 }
