--- a/stylus/segments.styl
+++ b/stylus/segments.styl
@@ -49,10 +49,10 @@ else
   display: flex
   flex-flow: row nowrap
 
-{prime-segment} > aside
+{prime-segment} > {x-minor}
   flex-shrink: 0
 
-{prime-segment} > article
+{prime-segment} > {x-major}
   flex-grow: 1
 
 {x-minor},
